# ROS-Anyya

./: .gitignore  launchsim_safe.py  render_map.py  render_nodes_map.py  render_path_v11.py  track_path_v11.csv
src/Option_One/: CMakeLists.txt  package.xml
src/Option_One/src/: extract_path.py  follow_path.cpp  follow_path_v2.cpp  test_turn.cpp  visualize_path.cpp
src/Option_One/地图与路径/: 关键节点.json  赛道地图分析.json
src/Option_One/文档/: 方案设计文档.md  赛道关键坐标参考.md  路径生成需求文档.md
src/cyberdog_simulator/cyberdog_gazebo/launch/: race_gazebo.launch.py
src/cyberdog_simulator/cyberdog_gazebo/script/: launchgazebo.sh
src/full_track_nav/: CMakeLists.txt  package.xml  track_path_v11.csv
src/full_track_nav/include/full_track_nav/: node_rotation.hpp  types.hpp
src/full_track_nav/src/: full_track_nav.cpp
src/mycode/: CMakeLists.txt  package.xml
src/mycode/include/openloop_motion/: openloop_motion.hpp
src/mycode/src/: full_track_openloop.cpp  full_track_openloop.py  openloop_motion.py  turn_and_move.cpp
src/workspace/: config_v3.py  gait_lib_v2.py  path_config.py  scheme1_step_tracking.py  scheme1_step_tracking_v2.py  scheme1_step_tracking_v3.py  track_path.csv
