<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Option_One</name>
  <version>0.0.1</version>
  <description>Phase 1: Path recording and Pure Pursuit path following</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cyberdog_msg</depend>
  <depend>lcm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
